# rust-agentai

./: .env.examples  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  pr-run-examples.yml  run-examples.yml  update-release.yml
agentai-macros/: Cargo.toml
agentai-macros/src/: lib.rs
crates/agentai/: CHANGELOG.md  Cargo.toml
crates/agentai-macros/: CHANGELOG.md  Cargo.toml
crates/agentai-macros/src/: lib.rs
crates/agentai/examples/: genai_custom.rs  simple.rs  struct_output.rs  tools_custom.rs  tools_mcp.rs  tools_web.rs
crates/agentai/src/: lib.rs
crates/agentai/src/examples/: tools_web.rs
crates/agentai/src/tool/: mod.rs  web.rs
examples/: genai_custom.rs  simple.rs  struct_output.rs  tools_custom.rs  tools_mcp.rs  tools_search.rs
examples/tools_mcp/src/: main.rs
scripts/: run-examples.sh
src/: agent.rs  lib.rs
src/examples/: mod.rs
src/tool/: buildin.rs  mcp.rs  mod.rs  streamable_http_mcp.rs  web.rs  websearch.rs
