[package]
name = "agentai-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# These dependencies are needed because the macro will generate code that uses them
# and they need to be available to the macro during compilation.
# However, the generated code will *also* need them in the consuming crate,
# so they are also dependencies of `rust-agentai`.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
heck = "0.5.0"
